--- a/style/style.css
+++ b/style/style.css
@@ -7,45 +7,55 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.limitar-secao {
-  width: 100%;
-  max-width: 1024px;
-  margin: 0 auto;
-}
+
 
 /* Topo da página */
 .container-topo {
-  position: relative;
-  padding: 35px 0px;
+  padding: 35px 50px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-.topo-logo {
-  position: relative;
+.container-logo {
+  width: 285px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.topo-logo img {
-  width: 80px;
+.topo-links {
+  width: 385px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.topo-logo div {
-  position: absolute;
-  top: 0;
-  left: 95px;
+.container-logo-imagem {
+  width: 100px;
+  height: 100px;
 }
 
-.topo-logo p {
+.container-logo-imagem img {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.container-logo p {
+  font-size: 12px;
   color: #2f86d6;
   font-weight: 600;
 }
 
-.topo-links {
-  position: absolute;
-  top: 65px;
-  right: 0;
-}
+
 
 .topo-links a {
-  font-size: 18px;
+  font-size: 13px;
   padding: 0px 10px;
   text-decoration: none;
   font-weight: 600;
@@ -55,16 +65,26 @@
 /* Banner da página */
 .secao-banner {
   background-color: #2f86d6;
+  padding: 100px 0px;
 }
 
 .container-banner {
-  position: relative;
-  padding: 180px 0px;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.container-banner div{
+.container-texto{
   color: #fff;
-  width: 470px;
+  padding: 10px 20px;
+  flex: 1 1 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  
 }
 
 .container-banner div p {
@@ -80,10 +100,9 @@
 }
 
 .container-banner img {
-  width: 50%;
-  position: absolute;
-  top: 100px;
-  right: 0;
+  width: 100%;
+  height: 100%;
+  flex: 1 1 468px;
 }
 
 
